--- a/report.ipynb
+++ b/report.ipynb
@@ -13,7 +13,7 @@
    "id": "d1ff03b3",
    "metadata": {},
    "source": [
-    "In this project, the aim is to solve a problem using various search algorithms and compare their qualities. BFS, IDS and A* are the algorithms used for this problem."
+    "In this project, we solve a problem using various search algorithms and compare their qualities. BFS, IDS, and A* are the algorithms used for this problem."
    ]
   },
   {
@@ -29,14 +29,14 @@
    "id": "5f8b84cd",
    "metadata": {},
    "source": [
-    "A player starts at location (0,0) of a $n\\times m$ map. some cells are blocked by obstacles. at each steps, the player can choose to move up, down, left or right if its path is not blocked by walls or obstacles. each cell may contain one of the following elements:\n",
+    "A player starts at location (0,0) of a $n\\times m$ map. Some cells contain obstacles and can not be accessed. At each step, the player can choose to move up, down, left, or right if the path is not blocked by walls or obstacles. Each cell may contain one of the following elements:\n",
     "\n",
-    "  - <b>Potion:</b> When player enters a cell with potion, he collects the potion.\n",
+    "  - <b>Potion:</b> When a player enters a cell with a potion, he collects the potion.\n",
     "    \n",
     "    \n",
-    "  - <b>Pill:</b> When player enters a cell with pill, he consumes the pill and a new player appears at location (n-1,0). afterwards, only one of the players may move at each step \n",
+    "  - <b>Pill:</b> When a player enters a cell with a pill, he consumes the pill and a new player appears at the location (n-1,0). Afterward, only one of the players may move at each step.\n",
     "    \n",
-    "The goal is to gather all players at location (n-1,m-1) and collect all of the potions in the map."
+    "The goal is to gather all players at location (n-1,m-1) and collect all the potions on the map."
    ]
   },
   {
@@ -52,21 +52,21 @@
    "id": "d58be7f9",
    "metadata": {},
    "source": [
-    "At first, the problem should be modeled as a graph so that the search algorithms can be applied to it in future steps. Each node representes one ditinct state of the map. Bellow, the components of the model is explained:\n",
+    "At first, the problem should be modeled as a graph so that the search algorithms can be applied to it in future steps. Each node represents one distinct state of the map. The components of the model are explained below:\n",
     "\n",
     " - <b>Initial State:</b> The initial state of the map is given as input in this problem, and the player always starts at bottom left corner of the map.\n",
     " \n",
     " \n",
-    " - <b>Actions:</b> At each step,one of the players can move either up, down, left or right. However, sometimes the players may be prevented from taking certain actions due to walls and obstacles.\n",
+    " - <b>Actions:</b> At each step, one of the players can move either up, down, left, or right. However, sometimes the players may be prevented from taking certain actions due to walls and obstacles.\n",
     " \n",
     " \n",
-    " - <b>Transition Model:</b> A state is recognized by this properties: 1- location of each player, 2- remaining potions, 3-location of each component(potion-pill-obstacle..) our transition model takes a state and an action as input and determines the next state properties using the rules described in problem description. if an action is impossible to take, the function returns 0 as output. \n",
+    " - <b>Transition Model:</b> A state is recognized by these properties: 1- location of each player, 2- remaining potions, 3- location of each component(potion-pill-obstacle..). Our transition model takes a state and an action as input and determines the next state properties using the rules described in the problem description. If an action is impossible to take, the function returns 0 as output.\n",
     " \n",
     " \n",
     " - <b>Goal State:</b> The goal state is when all of the players have reached the top right corner of the map and collected all potions in the map.\n",
     " \n",
     " \n",
-    " - <b>Path Cost:</b> In this problem, the cost of all actions are equal\n",
+    " - <b>Path Cost:</b> In this problem, the cost of all actions is the same.\n",
     " "
    ]
   },
@@ -90,6 +90,7 @@
     "import heapq as hp\n",
     "import bisect\n",
     "from collections import deque\n",
+    "\n",
     "PLAYER='P'\n",
     "POTION='M'\n",
     "PILL='D'\n",
@@ -101,9 +102,9 @@
    "id": "da41a574",
    "metadata": {},
    "source": [
-    "- <b>States:</b> we use dictionary to store the properties of each state. we choose dictionary because of its simplicity and built-in functions\n",
+    "- <b>States:</b> We use a dictionary to store the properties of each state. We choose the dictionary because of its simplicity and built-in functions.\n",
     "\n",
-    "<b>note:</b> Even though in was possible to obtain the number of potions by location of each component, we choose to store it separately because is used many times and we want our functions to be optimal."
+    "<b>Note:</b> Even though it was possible to obtain the number of potions by the location of each component, we choose to store them separately because this information is used many times, and we want our functions to be optimal."
    ]
   },
   {
@@ -111,7 +112,7 @@
    "id": "f16430b4",
    "metadata": {},
    "source": [
-    " - <b>Initiat State:</b>"
+    " - <b>Initial State:</b>"
    ]
   },
   {
@@ -245,12 +246,12 @@
    "metadata": {},
    "source": [
     "## Algorithm\n",
-    "bellow the BFS algorithm is implemented. a dictionary is used to store explored states because it is faster to check the existance of a key in dictionary. Since a dictionary cannot be used as a key, we define a function \"encode\" that takes an state and turn it into hashable format and returns the hashed dictionary.\n",
+    "The BFS algorithm is implemented below. A dictionary is used to store explored states because it is faster to check the existence of a key in the dictionary. Since a dictionary cannot be used as a key, we define a function \"encode\" that takes a state and turn it into a hashable format, and returns the hashed dictionary.\n",
     "## Pros and Cons\n",
-    "pros:\n",
+    "Pros:\n",
     " - Always returns the optimal solution\n",
     " \n",
-    "cons:\n",
+    "Cons:\n",
     " - Requires more space than IDS (of order O($b^m$))\n",
     " - Visits more states and is slower than A*(depends on heuristic)"
    ]
@@ -448,13 +449,13 @@
    "metadata": {},
    "source": [
     "## Algorithm\n",
-    "bellow the IDS algorithm is implemented. \"encode\" function from BFS is used here as well. the IDS functions uses DFS as a subroutine, it runs DFA but specifies the max depth DFS should explore and starting from 1, increases the depth after each run untill goal state is reached  \n",
+    "The IDS algorithm is implemented below. The \"encode\" function from BFS is used here as well. The IDS function uses DFS as a subroutine, it runs DFS but specifies the max depth DFS should explore and, starting from 1, increases the depth after each run until it reaches the goal state.\n",
     "## Pros and Cons\n",
-    "pros:\n",
+    "Pros:\n",
     " - Always returns the optimal solution\n",
     " - Uses less space than A* and BFS\n",
     " \n",
-    "cons:\n",
+    "Cons:\n",
     " - Visits more states and is slower than A*(depends on heuristic)\n",
     " - It is slower than BFS because it visits some states several times, however, it has the same time complexity. "
    ]
@@ -653,7 +654,7 @@
    "metadata": {},
    "source": [
     "## Algorithm\n",
-    "bellow the A* algorithm is implemented. the method used to keep the track of visited states is similar to previous parts. For this algorithm, a heap is used to extract the state with minimum cost at each step. the cost of a state is defined as follows:\n",
+    "The A* algorithm is implemented below. The method we use to store the visited states is similar to the previous parts. For this algorithm, we use a heap to find the state with the minimum cost at each step. The cost of a state is defined as follows:\n",
     "\n",
     "$$f(n)=g(n)+h(n)$$\n",
     "\n",
@@ -661,59 +662,58 @@
     "\n",
     "### heuristic function\n",
     "We need to define a heuristic that gives us a good estimation of the cost of reaching the goal and is also consistent. To find a good heuristic, we must first pay attention to the two properties of a goal state:\n",
-    " - **All players should be at location (n-1,m-1)**\n",
+    " - **All players should be at the location (n-1,m-1)**\n",
     " - **All potions should be collected**\n",
     " \n",
-    "if we pay attention to just the first part, we know that $location(final)=(row-1,col-1)$, so we can define the following heuristic:\n",
+    "If we pay attention to just the first part, we know that $location(final)=(row-1,col-1)$, so we can define the following heuristic:\n",
     "\n",
     "$$h_{distance}(n)=\\sum_{player}d_{Manhattan}(locatin(player),location(final))$$\n",
     "\n",
-    "However, this is not a good heuristic because it favours closing the distance to final cell at the cost of leaving the potions behind. so we need to modify it to include the penalty of leaving potions behind.\n",
-    "if we show a location as (x,y), we define the following symbols:\n",
+    "However, this is not a good heuristic because it favors closing the distance to the final cell at the cost of leaving the potions behind. so we need to modify it to include the penalty for leaving potions behind. if we show a location as (x,y), we define the following symbols:\n",
     " - **$player_{min x}$**: player with smallest x\n",
     " - **$player_{min y}$**: player with smallest y\n",
     " - **$potion_{min x}$**: potion with smallest x\n",
     " - **$potion_{min y}$**: potion with smallest y\n",
     " - $Positive(x)$: returns x if x is positive, otherwise returns 0\n",
     " \n",
-    "then we define the following function(it is not a heuristic):\n",
+    "Then we define the following function(it is not a heuristic):\n",
     "\n",
     "$$h_{potion}(n)=Positive(player_{min x}-potion_{min x})+Positive(player_{min y}-potion_{min y}) $$\n",
     "\n",
-    "our final heuristic is:\n",
+    "Our final heuristic is:\n",
     "\n",
     "$$h(n)=h_{potion}(n)+h_{distance}(n) $$\n",
     "\n",
     "Now we prove that this heuristic is consistent:\n",
-    "take A=current state and C=future state, we know that cost(A to C) is 1.\n",
-    "we prove consistency for action sets {Down,Left} and {Up,Right} seprately. notice that since both $h_{distance}(n)$ is distance based and $h_{potion}(n) $ is the sum of one horizontal and one vertical distance and they cannot change simultaneously after one step, if no pill is taken, they increase or decrase by at most 1 after each action.\n",
-    " - **UP or Right:**\n",
-    "  - **Pill is taken:**\n",
+    "Take A=current state and C=future state. We know that cost(A to C) is 1.\n",
+    "We prove consistency for action sets {Down, Left} and {Up, Right} separately. notice that since $h_{potion}(n) $ is the sum of horizontal and vertical distance and they cannot change simultaneously after one step, if no pill is taken, it increase or decrease by at most 1 after each action.\n",
+    " - **Up or Right:**\n",
+    "   - **Pill is taken:**\n",
     "      $$h_{potion}(A)-h_{potion}(C)\\leq Positive(player(A)_{min y}-potion_{min y})\\leq n-1$$\n",
     "      $$h_{distance}(A)- h_{distance}(C)=-(n-2)$$\n",
     "      $$\\rightarrow h(A)-h(C)\\leq 1$$\n",
-    "  - **Pill is not taken:**\n",
+    "   - **Pill is not taken:**\n",
     "      $$h_{potion}(A)-h_{potion}(C)\\leq 0$$\n",
     "      $$h_{distance}(A)- h_{distance}(C)=1$$\n",
     "      $$\\rightarrow h(A)-h(C)\\leq 1$$\n",
     " - **Down or Left:**\n",
-    "  - **Pill is taken:**\n",
+    "   - **Pill is taken:**\n",
     "      $$h_{potion}(A)-h_{potion}(C)\\leq (player(A)_{min y}-potion_{min y})\\leq n-1$$\n",
     "      $$h_{distance}(A)- h_{distance}(C)=-(n)$$\n",
     "      $$\\rightarrow h(A)-h(C)\\leq -1$$\n",
-    "  - **Pill is not taken:**\n",
+    "   - **Pill is not taken:**\n",
     "      $$h_{potion}(A)-h_{potion}(C)\\leq 1$$\n",
     "      $$h_{distance}(A)- h_{distance}(C)=-1$$\n",
     "      $$\\rightarrow h(A)-h(C)\\leq 0$$\n",
     "      \n",
-    "so in all cases, $h(A)-h(C)\\leq cost(A to C)$ and our heuristic is consistent\n",
+    "So in all cases, $h(A)-h(C)\\leq cost(A to C)$ and our heuristic is consistent.\n",
     "\n",
     "## Pros and Cons\n",
-    "pros:\n",
-    " - Always returns the optimal solution with a consistent heuristic\n",
-    " - Can be very faster and visit less states than BFS and IDS with a good heuristic function\n",
+    "Pros:\n",
+    " - Always returns the optimal solution with a consistent heuristic.\n",
+    " - Can be very faster and visits fewer states than BFS and IDS with a good heuristic function.\n",
     " \n",
-    "cons:\n",
+    "Cons:\n",
     " - It may be difficult and complicated to find a good heuristic for a problem.\n",
     " - Requires more space than IDS."
    ]
@@ -927,7 +927,7 @@
    "id": "12de7c89",
    "metadata": {},
    "source": [
-    "We may want to loose optimality to gain more speed. Weighted A* algorithm can be used to do that. It is faster than A* but will not always return the optimal solution. it uses $\\alpha\\times h(n)$ ($\\alpha>1$) instead of $h(n)$ as heuristic, so we may loose consistancy and optimal solution with some $\\alpha$"
+    "We may want to gain speed at the cost of optimality. Weighted A* algorithm can be used to do that. It is faster than A* but will not always return the optimal solution. it uses $\\alpha\\times h(n)$ ($\\alpha>1$) instead of $h(n)$ as the heuristic, so we may lose consistency and optimal solution with some $\\alpha$"
    ]
   },
   {
@@ -1213,7 +1213,7 @@
    "id": "afd3626b",
    "metadata": {},
    "source": [
-    "In general, the algorithm we choose to use depends highly on our situation, BFS is faster than IDS but needs more space. IDS, while it is slower than BFS, uses less space so it is suitable when we have a very limited memory. A star can be faster than BFS and IDS if a good heuristic is choosen, however, finding a good heuristic can be challenging and A star also requires more space than IDS. With Weighted A star , we loose the optimality but get the result way faster than normal A star."
+    "In general, the algorithm we choose to use depends highly on our situation, BFS is faster than IDS but needs more space. IDS, while it is slower than BFS, uses less space so it is suitable when we have very limited memory. A* can be faster than BFS and IDS if a good heuristic is chosen, however, finding a good heuristic can be challenging and A* also requires more space than IDS. With \"Weighted A*\", we lose the optimality but get the result way faster than the normal A star."
    ]
   },
   {
